syntax = "proto3";
package terrarium.module.services;

import "pb/terrarium/module/module.proto";

option go_package = "github.com/terrariumcloud/terrarium/internal/module/services";

service DependencyManager {
  rpc RegisterModuleDependencies(terrarium.module.RegisterModuleDependenciesRequest) returns (terrarium.module.Response) {}
  rpc RegisterContainerDependencies(terrarium.module.RegisterContainerDependenciesRequest) returns (terrarium.module.Response) {}
  rpc RetrieveContainerDependencies(terrarium.module.RetrieveContainerDependenciesRequestV2) returns (stream terrarium.module.ContainerDependenciesResponseV2) {}
  rpc RetrieveModuleDependencies(terrarium.module.RetrieveModuleDependenciesRequest) returns (stream terrarium.module.ModuleDependenciesResponse) {}
}
